--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,7 @@
     height: 40px;
     line-height: 40px;
     font-size: 12px;
-    margin: 0 auto;
-    border: 1px solid orange; }
+    margin: 0 auto; }
     .TopMenu .TopMenuContain span a {
       text-decoration: none;
       color: #b0b0b0;
@@ -43,5 +42,46 @@
         .TopMenu .TopMenuContain .TopMenuRight .cart:hover {
           background-color: white;
           color: #ff6700; }
+        .TopMenu .TopMenuContain .TopMenuRight .cart img {
+          width: 20px;
+          position: relative;
+          top: 6px; }
+        .TopMenu .TopMenuContain .TopMenuRight .cart .cartMain {
+          display: none;
+          width: 300px;
+          height: 100px;
+          position: relative;
+          left: -180px;
+          box-shadow: 0 0 10px gray;
+          line-height: 100px;
+          color: #424242; }
+
+.logoMenu {
+  width: 100%;
+  height: 100px;
+  position: relative;
+  top: 40px;
+  border: 1px solid red; }
+  .logoMenu .logoMenuLeft {
+    width: 60px;
+    height: 100px;
+    float: left; }
+    .logoMenu .logoMenuLeft img {
+      position: relative;
+      top: 50%;
+      margin-top: -29px; }
+  .logoMenu .logoMenuCenter {
+    border: 1px solid red;
+    width: 870px;
+    height: 100px;
+    float: left; }
+    .logoMenu .logoMenuCenter ul {
+      border: 1px solid black;
+      float: left;
+      list-style: none;
+      height: 100px;
+      line-height: 100px; }
+      .logoMenu .logoMenuCenter ul li {
+        float: left; }
 
 /*# sourceMappingURL=main.css.map */
