--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,7 +23,6 @@ $ft:20px;
     line-height: 40px;
     font-size: 12px;
     margin: 0 auto;
-    border: 1px solid orange;
     span{
       a{
         text-decoration: none;
@@ -52,8 +51,59 @@ $ft:20px;
           background-color: rgba(255,255,255,1);
           color: rgba(255,103,0,1);
         }
+        img{
+          width: 20px;
+          position: relative;
+          top:6px;
+        }
+        .cartMain{
+          display: none;
+          width: 300px;
+          height: 100px;
+          position: relative;
+          left: -180px;
+          box-shadow: 0 0 10px gray;
+          line-height: 100px;
+          color: rgba(66,66,66,1);
+        }
+
       }
     }
   }
+}
+
+.logoMenu{
+  width: 100%;
+  height: 100px;
+  position: relative;
+  top: 40px;
+  border: 1px solid red;
+  .logoMenuLeft{
+    width: 60px;
+    height: 100px;
+    float: left;
+    img{
+      position: relative;
+      top: 50%;
+      margin-top: -29px;
+    }
+  }
+  .logoMenuCenter{
+    border: 1px solid red;
+    width: 870px;
+    height: 100px;
+    float: left;
+    ul{
+      border: 1px solid black;
+      float: left;
+      list-style: none;
+      height: 100px;
+      line-height: 100px;
+      li{
+        float: left;
+      }
+    }
+  }
+
 }
 
