--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,7 @@
           background-color: white;
           color: #ff6700; }
         .TopMenu .TopMenuContain .TopMenuRight .cart img {
-          width: 20px;
-          position: relative;
-          top: 6px; }
+          width: 20px; }
         .TopMenu .TopMenuContain .TopMenuRight .cart .cartMain {
           display: none;
           width: 300px;
@@ -54,7 +52,9 @@
           left: -180px;
           box-shadow: 0 0 10px gray;
           line-height: 100px;
-          color: #424242; }
+          color: #424242;
+          background-color: #ffffff;
+          z-index: 1111; }
 
 .logoMenu {
   width: 100%;
@@ -71,17 +71,49 @@
       top: 50%;
       margin-top: -29px; }
   .logoMenu .logoMenuCenter {
-    border: 1px solid red;
-    width: 870px;
+    width: 860px;
     height: 100px;
     float: left; }
     .logoMenu .logoMenuCenter ul {
-      border: 1px solid black;
-      float: left;
+      float: right;
+      margin-right: 90px;
       list-style: none;
       height: 100px;
       line-height: 100px; }
       .logoMenu .logoMenuCenter ul li {
-        float: left; }
+        float: left;
+        width: 58px;
+        font-size: 16px;
+        text-align: center; }
+        .logoMenu .logoMenuCenter ul li a {
+          text-decoration: none;
+          color: #424242; }
+          .logoMenu .logoMenuCenter ul li a:hover {
+            color: #ff6700; }
+  .logoMenu .logoMenuRight {
+    width: 301px;
+    height: 100px;
+    float: right; }
+    .logoMenu .logoMenuRight .search {
+      width: 245px;
+      height: 50px;
+      border: 1px solid #E0E0E0;
+      position: relative;
+      top: 25px;
+      float: right; }
+    .logoMenu .logoMenuRight .searchSub {
+      width: 50px;
+      height: 50px;
+      border: 1px solid #E0E0E0;
+      background-color: #ffffff;
+      position: relative;
+      top: 25px;
+      float: right;
+      font-size: 18px;
+      color: #616161; }
+      .logoMenu .logoMenuRight .searchSub:hover {
+        transition: background-color 0.5s;
+        background-color: #ff6700;
+        color: #ffffff; }
 
 /*# sourceMappingURL=main.css.map */
