--- a/sass/main.scss
+++ b/sass/main.scss
@@ -53,8 +53,6 @@ $ft:20px;
         }
         img{
           width: 20px;
-          position: relative;
-          top:6px;
         }
         .cartMain{
           display: none;
@@ -65,6 +63,8 @@ $ft:20px;
           box-shadow: 0 0 10px gray;
           line-height: 100px;
           color: rgba(66,66,66,1);
+          background-color: #ffffff;
+          z-index: 1111;
         }
 
       }
@@ -89,18 +89,56 @@ $ft:20px;
     }
   }
   .logoMenuCenter{
-    border: 1px solid red;
-    width: 870px;
+    width: 860px;
     height: 100px;
     float: left;
     ul{
-      border: 1px solid black;
-      float: left;
+      float: right;
+      margin-right: 90px;
       list-style: none;
       height: 100px;
       line-height: 100px;
       li{
         float: left;
+        width: 58px;
+        font-size: 16px;
+        text-align: center;
+        a{
+          text-decoration: none;
+          color: rgba(66,66,66,1);
+          &:hover{
+            color: rgba(255,103,0,1);
+          }
+        }
+      }
+    }
+  }
+  .logoMenuRight{
+    width:301px;
+    height: 100px;
+    float: right;
+    .search{
+      width: 245px;
+      height: 50px;
+      border: 1px solid #E0E0E0;
+      position: relative;
+      top: 25px;
+      float: right;
+    }
+    .searchSub{
+      width: 50px;
+      height: 50px;
+      border: 1px solid #E0E0E0;
+      background-color: #ffffff;
+      position: relative;
+      top: 25px;
+      float: right;
+      font-size: 18px;
+      color: rgba(97,97,97,1);
+      &:hover{
+        transition: background-color 0.5s;
+        background-color: rgba(255,103,0,1);
+        color: #ffffff;
       }
     }
   }
