--- a/sass/main.scss
+++ b/sass/main.scss
@@ -117,6 +117,10 @@ $ft:20px;
     width:301px;
     height: 100px;
     float: right;
+    label{
+      height: 100px;
+      float: right;
+    }
     .search{
       width: 245px;
       height: 50px;
