--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   padding: 0;
   margin: 0; }
@@ -61,7 +62,7 @@
   height: 100px;
   position: relative;
   top: 40px;
-  border: 1px solid red; }
+  border: 1px solid blue; }
   .logoMenu .logoMenuLeft {
     width: 60px;
     height: 100px;
@@ -119,5 +120,51 @@
         transition: background-color 0.5s;
         background-color: #ff6700;
         color: #ffffff; }
+
+.MainMenu {
+  border: 1px solid black;
+  position: relative;
+  top: 40px;
+  width: 100%;
+  height: 460px; }
+  .MainMenu .slider {
+    overflow: hidden;
+    float: left;
+    width: 100%;
+    height: 470px;
+    position: relative; }
+    .MainMenu .slider li {
+      position: absolute;
+      display: none; }
+      .MainMenu .slider li:first-child {
+        display: block; }
+      .MainMenu .slider li img {
+        width: 100%; }
+    .MainMenu .slider .arrow {
+      display: block; }
+      .MainMenu .slider .arrow .arrow-left,
+      .MainMenu .slider .arrow .arrow-right {
+        font-family: "SimSun", "瀹嬩綋", sans-serif;
+        width: 30px;
+        height: 60px;
+        background-color: rgba(0, 0, 0, 0.1);
+        position: absolute;
+        top: 50%;
+        margin-top: -30px;
+        cursor: pointer;
+        text-align: center;
+        line-height: 60px;
+        color: #fff;
+        font-weight: 700;
+        font-size: 30px; }
+        .MainMenu .slider .arrow .arrow-left:hover,
+        .MainMenu .slider .arrow .arrow-right:hover {
+          background-color: rgba(0, 0, 0, 0.5); }
+      .MainMenu .slider .arrow .arrow-left {
+        left: 236px; }
+      .MainMenu .slider .arrow .arrow-right {
+        right: 0; }
+    .MainMenu .slider:hover {
+      display: block; }
 
 /*# sourceMappingURL=main.css.map */
