--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,7 +77,7 @@ $ft:20px;
   height: 100px;
   position: relative;
   top: 40px;
-  border: 1px solid red;
+  border: 1px solid blue;
   .logoMenuLeft{
     width: 60px;
     height: 100px;
@@ -152,3 +152,58 @@ $ft:20px;
 
 }
 
+.MainMenu{
+  border: 1px solid black;
+  position: relative;
+  top: 40px;
+  width: 100%;
+  height: 460px;
+  .slider {
+    overflow: hidden;
+    float: left;
+    width:100%;
+    height: 470px;
+    position: relative;
+    li {
+      position: absolute;
+      display: none;
+      &:first-child {
+        display: block;
+      }
+      img{
+        width: 100%;
+      }
+    }
+    .arrow {
+      display: block;
+      .arrow-left,
+      .arrow-right {
+        font-family: "SimSun", "宋体", sans-serif;
+        width: 30px;
+        height: 60px;
+        background-color: rgba(0, 0, 0, 0.1);
+        position: absolute;
+        top: 50%;
+        margin-top: -30px;
+        cursor: pointer;
+        text-align: center;
+        line-height: 60px;
+        color: #fff;
+        font-weight: 700;
+        font-size: 30px;
+        &:hover{
+          background-color: rgba(0, 0, 0, 0.5);
+        }
+      }
+      .arrow-left {
+        left: 236px;
+      }
+      .arrow-right {
+        right: 0;
+      }
+    }
+    &:hover{
+      display: block;
+    }
+  }
+}
