--- a/sass/main.scss
+++ b/sass/main.scss
@@ -158,6 +158,36 @@ $ft:20px;
   top: 40px;
   width: 100%;
   height: 460px;
+  .MainMenuRight{
+    width: 236px;
+    height: 100%;
+    position: absolute;
+    z-index: 1111;
+    border: 1px solid orange;
+    background-color: rgba(76,88,94,0.6);
+    ul{
+      list-style: none;
+      position: relative;
+      top: 50%;
+      margin-top: -210px;
+      li{
+        color: #ffffff;
+        padding-left: 30px;
+        height: 42px;
+        line-height: 42px;
+          span{
+            float: right;
+            margin-right: 20px;
+            i{
+              color: rgba(191,198,200,1);
+            }
+          }
+        &:hover{
+          background-color: #ff6700;
+        }
+      }
+    }
+  }
   .slider {
     overflow: hidden;
     float: left;
