--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,7 @@
   width: 100%;
   height: 100px;
   position: relative;
-  top: 40px;
-  border: 1px solid blue; }
+  top: 40px; }
   .logoMenu .logoMenuLeft {
     width: 60px;
     height: 100px;
@@ -122,7 +121,6 @@
         color: #ffffff; }
 
 .MainMenu {
-  border: 1px solid black;
   position: relative;
   top: 40px;
   width: 100%;
@@ -132,7 +130,6 @@
     height: 100%;
     position: absolute;
     z-index: 1111;
-    border: 1px solid orange;
     background-color: rgba(76, 88, 94, 0.6); }
     .MainMenu .MainMenuRight ul {
       list-style: none;
@@ -151,6 +148,17 @@
             color: #bfc6c8; }
         .MainMenu .MainMenuRight ul li:hover {
           background-color: #ff6700; }
+        .MainMenu .MainMenuRight ul li .MenuCenter {
+          display: none;
+          position: absolute;
+          z-index: 111;
+          left: 236px;
+          top: -18px;
+          width: 988px;
+          height: 458px;
+          background-color: #ffffff;
+          box-shadow: 5px 5px 10px #a9a9a9;
+          color: #000000; }
   .MainMenu .slider {
     overflow: hidden;
     float: left;
@@ -183,7 +191,7 @@
         font-size: 30px; }
         .MainMenu .slider .arrow .arrow-left:hover,
         .MainMenu .slider .arrow .arrow-right:hover {
-          background-color: rgba(0, 0, 0, 0.5); }
+          background-color: rgba(0, 0, 0, 0.6); }
       .MainMenu .slider .arrow .arrow-left {
         left: 236px; }
       .MainMenu .slider .arrow .arrow-right {
