--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,8 @@
         color: #ffffff;
         padding-left: 30px;
         height: 42px;
-        line-height: 42px; }
+        line-height: 42px;
+        cursor: default; }
         .MainMenu .MainMenuRight ul li span {
           float: right;
           margin-right: 20px; }
