--- a/sass/main.scss
+++ b/sass/main.scss
@@ -172,6 +172,7 @@ $ft:20px;
         padding-left: 30px;
         height: 42px;
         line-height: 42px;
+        cursor: default;
           span{
             float: right;
             margin-right: 20px;
