--- a/sass/main.scss
+++ b/sass/main.scss
@@ -247,3 +247,26 @@ $ft:20px;
     }
   }
 }
+
+.TopList{
+  width: 100%;
+  height: 170px;
+  border: 1px solid green;
+  position:  relative;
+  top: 45px;float: left;
+  .TopListLeft{
+    width: 236px;
+    height: 170px;
+    border: 1px solid blue;
+    float: left;
+  }
+  .TopListColumn{
+    width: 316px;
+    height: 170px;
+    margin-left: 12px;
+    float: right;
+    img{
+      width: 100%;
+    }
+  }
+}
