--- a/css/main.css
+++ b/css/main.css
@@ -238,4 +238,14 @@
     .TopList .TopListColumn img {
       width: 100%; }
 
+.banner {
+  width: 100%;
+  height: 120px;
+  float: left;
+  position: relative;
+  top: 84px; }
+  .banner img {
+    float: left;
+    width: 100%; }
+
 /*# sourceMappingURL=main.css.map */
