--- a/sass/main.scss
+++ b/sass/main.scss
@@ -294,3 +294,14 @@ $ft:20px;
     }
   }
 }
+.banner{
+  width: 100%;
+  height: 120px;
+  float: left;
+  position: relative;
+  top: 84px;
+  img{
+    float: left;
+    width: 100%;
+  }
+}
