--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@ $ft:20px;
 
 .main{
   width: 1226px;
-  height: 1200px;
+  height: 980px;
   border: 1px solid red;
   margin: 0 auto;
 }
@@ -303,5 +303,66 @@ $ft:20px;
   img{
     float: left;
     width: 100%;
+  }
+}
+
+.mainContain{
+  border: 1px solid black;
+  width: 100%;
+  height: 1000px;
+  position: absolute;
+  background-color: #e2e2e2;
+  .phone{
+    width: 1226px;
+    border: 1px solid blue;
+    margin: 0 auto;
+    background-color: #e2e2e2;
+    .phoneTop{
+      width: 100%;
+      height: 80px;
+      line-height: 90px;
+      font-size: 20px;
+    }
+    .phoneContain{
+      height: 615px;
+      width: 100%;
+      .phoneLeft{
+        width: 235px;
+        height: 100%;
+        float: left;
+        img{
+          width: 100%;
+        }
+      }
+      .phoneMain{
+        height: 100%;
+        width: 986px;
+        position: relative;
+        top: -10px;
+        float: right;
+        ul{
+          list-style: none;
+          li{
+            width: 236px;
+            height: 300px;
+            background-color: #ffffff;
+            float: right;
+            text-align: center;
+            padding-top: 40px;
+            margin-left: 10px;
+            margin-bottom: 14px;
+            img{
+              width: 120px;
+            }
+            &:hover{
+
+            }
+          }
+        }
+        .phonel1{
+          margin-bottom: 2px;
+        }
+      }
+    }
   }
 }
