家电模块修改2

--- a/css/main.css
+++ b/css/main.css
@@ -392,5 +392,10 @@
       .mainContain .EndList div img {
         margin-top: 20px;
         margin-right: 20px; }
+  .mainContain .icon1 {
+    font-size: 60px;
+    color: #ff6700;
+    margin-top: 30px;
+    margin-right: 50px; }
 
 /*# sourceMappingURL=main.css.map */
