--- a/sass/main.scss
+++ b/sass/main.scss
@@ -509,4 +509,8 @@ $ft:20px;
     right: 50px;
   }
 }
+  .hiddenDiv{
+    display: none;
+    width: 100%;height: 75px;background-color: #ff6700;position: relative;margin-top: -60px;
+  }
 }
