家电模块添加hover

--- a/css/main.css
+++ b/css/main.css
@@ -404,5 +404,7 @@
     background-color: #ff6700;
     position: relative;
     margin-top: -60px; }
+    .mainContain .hiddenDiv p {
+      color: #ffffff; }
 
 /*# sourceMappingURL=main.css.map */
