--- a/sass/main.scss
+++ b/sass/main.scss
@@ -511,6 +511,13 @@ $ft:20px;
 }
   .hiddenDiv{
     display: none;
-    width: 100%;height: 75px;background-color: #ff6700;position: relative;margin-top: -60px;
+    width: 100%;
+    height: 75px;
+    background-color: #ff6700;
+    position: relative;
+    margin-top: -60px;
+    p{
+      color: #ffffff;
+    }
   }
 }
