--- a/sass/main.scss
+++ b/sass/main.scss
@@ -494,7 +494,7 @@ $ft:20px;
 
   }
 
-  .banner3{
+  .banner3,.banner4{
     padding:{
       top: 22px;
       bottom: 30px;
@@ -503,6 +503,7 @@ $ft:20px;
       width: 100%;
     }
   }
+
 
 .icon1{
   font-size: 60px;
