--- a/sass/main.scss
+++ b/sass/main.scss
@@ -373,6 +373,26 @@ $ft:20px;
     color: #a9a9a9;
     margin-top: -5px;
   }
+  .Repingtxt1{
+    color: #3c3c3c;
+    margin-top: 20px;
+    padding:{
+      left: 24px;
+      right: 24px;
+      top: 17px;
+      bottom: 10px;
+    };
+    text-align: left;
+  }
+  .Repingtxt2{
+    color: #a9a9a9;
+    text-align: left;
+    padding-left: 24px;
+  }
+  .Repingtxt3{
+    padding-left: 24px;
+    text-align: left;
+  }
   .jiadian{
     width: 1226px;
     margin: 0 auto;
@@ -501,6 +521,104 @@ $ft:20px;
     }
     img{
       width: 100%;
+    }
+  }
+
+  .tuijian{
+    width: 1226px;
+    margin: 0 auto;
+    background-color: #e2e2e2;
+    border: 1px solid red;
+    overflow: hidden;
+    padding-bottom: 40px;
+    .banner5{
+      img{
+        width: 100%;
+        padding: {
+          top: 40px;
+          bottom: 20px;
+        }
+      }
+    }
+    .tuijianTop{
+      border: 1px solid black;
+      margin:{
+        top: 15px;
+        bottom: 15px;
+      };
+      font-size: 20px;
+    }
+    .tuijianBody{
+      border: 1px solid red;
+      float: right;
+      ul{
+        list-style: none;
+        li{
+          width: 230px;
+          height: 300px;
+          background-color: #ffffff;
+          float: right;
+          text-align: center;
+          padding-top: 40px;
+          margin: {
+            left: 7px;
+            right: 7px;
+            bottom: 14px;
+          };
+          img{
+            width: 140px;
+          }
+          a{
+            text-decoration: none;
+          }
+          &:hover{
+            position: relative;
+            top: -5px;
+            transition: 0.3s;
+            box-shadow: 5px 5px 10px #a9a9a9;
+          }
+        }
+      }
+    }
+    .repingTop{
+      border: 2px solid black;
+      font-size: 20px;
+      float: left;
+      width: 100%;
+      margin:{
+        top: 15px;
+        bottom: 15px;
+      };
+    }
+    .repingBody{
+      border: 1px solid red;
+      float: left;
+      ul{
+        list-style: none;
+        li{
+          width: 290px;
+          height: 416px;
+          background-color: #ffffff;
+          float: right;
+          text-align: center;
+          margin: {
+            left: 7px;
+            right: 7px;
+          };
+          img{
+            width: 100%;
+          }
+          a{
+            text-decoration: none;
+          }
+          &:hover{
+            position: relative;
+            top: -5px;
+            transition: 0.3s;
+            box-shadow: 5px 5px 10px #a9a9a9;
+          }
+        }
+      }
     }
   }
 
