--- a/sass/main.scss
+++ b/sass/main.scss
@@ -643,3 +643,13 @@ $ft:20px;
     }
   }
 }
+.bottom{
+  border: 1px solid black;
+  background-color: #ffffff;
+  .baoxiu{
+    border: 1px solid black;
+    margin: 0 auto;
+    width: 1226px;
+    height: 80px;
+  }
+}
